--- a/orders/templates/orders/salesman_orders.html
+++ b/orders/templates/orders/salesman_orders.html
@@ -243,9 +243,8 @@
     <!-- Header Buttons -->
     <div class="header-buttons">
         <div class="button-group">
-            <a href="https://junaiddataanalyst.pythonanywhere.com" target="_blank" class="btn">Stock Details</a>
-            <a href="https://jomix.pythonanywhere.com" target="_blank" class="btn">Jomix Items</a>
-            <a href="https://valoginjnd.pythonanywhere.com" target="_blank" class="btn">Valogin Items</a>
+            <a href="https://stock.junaidworld.com" target="_blank" class="btn">Stock Details</a>
+            <a href="{% url 'customer_frequency_analysis_sap' %}" target="_blank" class="btn">Customer Analysis</a>
             <a href="{% url 'customer_list' %}" target="_blank" class="btn">Payment Collections</a>
         </div>
     </div>
